file (GLOB ESPM_SRC "*.h" "*.cpp")
add_library(espm STATIC ${ESPM_SRC})
set_target_properties(espm PROPERTIES CXX_STANDARD 17 CXX_EXTENSIONS OFF)
target_include_directories(espm PUBLIC "../${GITMODULES}/sparsepp")
target_include_directories(espm PUBLIC ${CMAKE_CURRENT_LIST_DIR})
if(MSVC)
  # target_compile_definitions(espm PRIVATE define SPP_USE_SPP_ALLOC=1)
  # it breaks Release Win32 version
endif()
if(UNIX)
  target_link_libraries(espm stdc++fs)
endif()